...
    useCallback(() => {
      setHeaderRightButtons([
        {
          icon: "add",
          onPress: () => router.push("stack/addCategory"),
          action: "add_category",
          testId: "add-category",
        },
      ]);
      setHeaderTitle(t("title"));
    }, [])
  );

...
