...
    >
      <Text style={[{ alignSelf: "center" }, textStyle.title]} accessible={false}>
        {text}
      </Text>
      <GestureDetector gesture={pan}>
        <Animated.View
          testID="swipe-button-pill"
          style={{
            backgroundColor: disable ? "#7f7f7f" : colors.tabbarIconActive,
            height: pillSize,
            width: pillSize,
            borderRadius: 8,
            position: "absolute",
...
