...
const CATEGORY_TYPES = [
  {
    id: "income",
    label: "income",
    value: "income",
    icon: "income",
    testId: "group-btn-income",
  },
  {
    id: "expense",
    label: "expense",
    value: "expense",
    icon: "expense",
    testId: "group-btn-expense",
  },
  {
    id: "transfer",
    label: "transfer",
    value: "transfer",
    icon: "transfer",
...
