...
  const { setHeaderRightButtons, setHeaderTitle } = useHeader();
  const { t } = useTranslation("", { keyPrefix: "app.stack.tabs.group" });
  useFocusEffect(
    useCallback(() => {
      setHeaderRightButtons(
        [
          { icon: "add", onPress: () => router.push("stack/addGroup"), action: "add_group", testId: "add-group" },
          { icon: "graph", onPress: () => router.push("stack/addGroup"), action: "add_group", testId: "chart-group" },
        ].filter((a) => (__DEV__ ? true : a.icon !== "graph"))
      );
      setHeaderTitle(t("title"));
    }, [setHeaderRightButtons])
  );
...
