...
      <Stack screenOptions={{ header: (props) => <Header {...props} />, animation: "none" }}>
        <Stack.Screen name="(tabs)" />
        <Stack.Screen name="addTransaction" options={{ title: "Add Transaction" }} />
        <Stack.Screen name="addCategory" options={{ title: "Add Category" }} />
        <Stack.Screen name="backup" options={{ title: "Backup" }} />
        <Stack.Screen name="export" options={{ title: "Export" }} />
        <Stack.Screen name="about" options={{ title: "About" }} />
        <Stack.Screen name="help" options={{ title: "Help" }} />
      </Stack>
    </SafeAreaView>
  );
};

...
