...
            </SettingItem>
          )}
        </View>

        {/* <SettingItem label={t("theme")} leftIcon="paintbrush" onPress={() => router.push("settings/theme")}> */}
        <View style={[styles.section, { backgroundColor: colors.sectionBackground }]}>
          <Text style={textStyle.title}>Preference</Text>
          <SettingItem
            label={t("currency")}
            leftIcon="globe"
            onPress={() => showSelectList("currency", settings.currency.code)}
          >
            <Text style={textStyle.body}>{settings.currency.name}</Text>
...
