...
    top: withTiming(isHeaderVisible ? top : -(top + 56), { duration: 100 }),
  }));

  return (
    <Animated.View style={[styles.headerContainer, animatedStyle]}>
      {back ? (
        <Pressable onPress={() => router.dismiss()} testID="page-back">
          <View style={[styles.headerActionBtn, { backgroundColor: colors.headerBackground }]}>
            <Icon name="back" size={24} color={colors.headerIconActive} />
          </View>
        </Pressable>
      ) : null}
      <View style={[styles.titleContianer, { backgroundColor: colors.headerBackground }]}>
...
