...
                color={state.index === index ? colors.tabbarIconActive : colors.tabbarIcon}
              />
            </View>
          </Link>
        ))}
      </View>
      <Link href="/addTransaction" asChild testID="add-transaction">
        <Pressable>
          <View style={[styles.addBtn, { backgroundColor: colors.tabbarBackgroundSecondary }]}>
            <Icon name="add" size={24} color={colors.tabbarIconActiveSecondary} />
          </View>
        </Pressable>
      </Link>
...
