...
              {props.cancel}
            </Text>
          </Pressable>
        </View>
        <View style={[styles.outlineButton, { flexGrow: 1, backgroundColor: props.color }]}>
          <Pressable
            testID="delete-container-confirm-btn"
            style={styles.button}
            android_ripple={{ color: props.color || colors.rippleColor }}
            onPress={props.onComfirm}
          >
            <Text style={textStyle.title}>{props.confirm}</Text>
          </Pressable>
...
