...
          <SettingItem label={t("backup")} leftIcon="backup" onPress={() => router.push("backup")} />

          <SettingItem
            label={t("deleteAllData")}
            leftIcon="delete"
            onPress={() => showSelectList("delete", "")}
            testId="delete-all-data"
          />
        </View>

        <View style={[styles.section, { backgroundColor: colors.sectionBackground, marginBottom: 8 }]}>
          <Text style={textStyle.title}>{t("about")}</Text>

...
