...
        label="Note"
        multiline
        value={transactionNote}
        onChangeText={text => setTransactionNote(text)}
      />
      <View style={styles.selectContainer}>
        <TranslateText category="subheading">Category</TranslateText>
        <TouchableNativeFeedback onPress={() => openBottomSheet('category')}>
          <View style={[styles.select, styles.padding]}>
            <View style={styles.select}>
              <Icon name="buffer" color={selectedCategory.color} size={30} />
              <Subheading>{selectedCategory.category}</Subheading>
            </View>
...
        </TouchableNativeFeedback>
      </View>
      <Button
        onPress={handleSubmit}
        disabled={!transactionAmount > 0}
        style={{zIndex: 0}}>
        Add Transaction
      </Button>
      <CategoryBottomSheet
        fref={categoryBottomSheetRef}
        snapPoints={snapPoints}
        onPress={handleChangeCategory}
      />
...
