...

import {Button, TextInput, Subheading, Title} from 'react-native-paper';
import DropDown from 'react-native-paper-dropdown';

import ThemeColor from '../../components/ThemeColor';
const themeTypes = [
  {label: 'Light', value: 'light'},
  {label: 'Dark', value: 'dark'},
];
const usid = new USID();
const AddThemeScreen = ({navigation, route}) => {
  const [showThemeDropdown, setShowThemeDropdown] = useState(false);
  const [isLoading, setIsLoading] = useState(false);
  const [theme, setTheme] = useState({
...
