...
        </Description>
      </View>
      <Divider />
      <View style={styles.section}>
        <Subheading>Theme Settings</Subheading>
        <DropDown
          label="Theme"
          mode="contained"
          visible={showThemeDropdown}
          showDropDown={() => setShowThemeDropdown(true)}
          onDismiss={() => setShowThemeDropdown(false)}
          value={currentTheme}
          setValue={handlechangeTheme}
...
